[package]
name = "ode_solvers"
version = "0.5.0"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "Numerical methods to solve ordinary differential equations (ODEs) in Rust."
edition = "2021"

documentation = "https://docs.rs/ode_solvers/"
homepage = "https://srenevey.github.io/ode-solvers/"
repository = "https://github.com/srenevey/ode-solvers"
readme = "README.md"

keywords = ["ode", "math", "solver", "equations"]
categories = ["science"]

license = "BSD-3-Clause"

[dependencies]
nalgebra = "0.33.1"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
simba = "0.9.0"
thiserror = { version = "2.0.3", default-features = false }
